add mais arquivos

--- a/calender.html
+++ b/calender.html
@@ -91,7 +91,8 @@
     <h3 id="Truck"> Truck</h3>
     <h3 id="carreta"> Carreta 2 eixos</h3>
     <h3 id="Bitrem">  Bitrem</h3>
-
+    <h2>um veículo não pode fazer mais de 1 entrga por dia    </h2>
+    <h2>um veículo não pode fazer mais de 3 entregas por dia  </h2>
  
 </body>
 </html>
